# Venture-Capital-Ai-Research-Assistant

./: .replit  Pasted--Company-Name-11x-ai-Company-Overview-11x-ai-is-an-AI-and-automation-company-that-spec-1726769080742.txt  Pasted--Company-Name-11x-ai-Company-Overview-11x-ai-is-an-AI-startup-founded-in-2022-by-Hasan-1726768947847.txt  Pasted--Company-Name-11x-ai-Company-URL-https-www-11x-ai-Company-Overview-11x-ai-i-1726768491668.txt  Pasted--Company-Name-The-Mom-Project-Company-Overview-The-Mom-Project-is-a-digital-talent--1726776216243.txt  README.txt  main.py  pyproject.toml
static/css/: styles.css
static/js/: script.js
templates/: index.html
